--- a/package.json
+++ b/package.json
@@ -1,58 +1,49 @@
 {
-	"name": "svelteapp-typescript-go",
-	"version": "0.1.0",
-	"license": "MIT",
-	"private": true,
-	"scripts": {
-		"setup-app": "yarn install --frozen-lockfile",
-		"setup-server": "echo \"Download Golang dependencies...\" && go mod download",
-		"setup-full": "yarn setup-app && yarn setup-server",
-		"setup-all": "yarn setup-full",
-		"upgrade-app": "yarn-upgrade-all && yarn upgrade",
-		"upgrade-server": "echo \"Update Golang dependencies...\" && go get -u ./...",
-		"upgrade-full": "yarn upgrade-app && yarn upgrade-server",
-		"upgrade-all": "yarn upgrade-full",
-		"dev": "vite dev --port 3000 --open --host",
-		"preview": "vite preview --port 8080 --open --host",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
-		"build-app": "yarn check && yarn vite build",
-		"build-server": "echo \"Building Golang binary...\" && go env -w CGO_ENABLED=1 && go build -buildvcs=false -mod=readonly -v",
-		"build-full": "yarn build-app && yarn build-server",
-		"build-all": "yarn build-full",
-		"build": "yarn build-full",
-		"serve": "open-cli http://localhost:8080 && ./main",
-		"serve-win": "open-cli http://localhost:8080 && main",
-		"docker": "docker build . -t svelte-ts-go -f Dockerfile",
-		"docker-run": "open-cli http://localhost:8080 && docker run -p 8080:8080 --rm svelte-ts-go",
-		"commit": "yarn format && git pull origin main && git add . && git commit -m \"Updating\" && git push origin main"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.6",
-		"@sveltejs/kit": "^2.9.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.2",
-		"@typescript-eslint/eslint-plugin": "^8.16.0",
-		"@typescript-eslint/parser": "^8.16.0",
-		"eslint": "^9.16.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.46.1",
-		"open-cli": "^8.0.0",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.3.2",
-		"svelte": "^5.7.1",
-		"svelte-check": "^4.1.0",
-		"svelte-preprocess": "^6.0.3",
-		"tslib": "^2.8.1",
-		"typescript": "^5.7.2",
-		"vite": "^5.4.11",
-		"yarn-upgrade-all": "^0.7.4"
-	},
-	"type": "module",
-	"dependencies": {
-		"@fontsource/open-sans": "^5.1.0",
-		"bootstrap": "^5.3.3",
-		"picomatch": "^4.0.2"
-	}
+    "name": "svelteapp-typescript-go",
+    "version": "0.1.0",
+    "license": "MIT",
+    "private": true,
+    "scripts": {
+        "setup-app": "yarn install --frozen-lockfile",
+        "setup-server": "echo \"Download Golang dependencies...\" && go mod download",
+        "setup-full": "yarn setup-app && yarn setup-server",
+        "setup-all": "yarn setup-full",
+        "upgrade-app": "yarn-upgrade-all && yarn upgrade",
+        "upgrade-server": "echo \"Update Golang dependencies...\" && go get -u ./...",
+        "upgrade-full": "yarn upgrade-app && yarn upgrade-server",
+        "upgrade-all": "yarn upgrade-full",
+        "dev": "vite dev --port 3000 --open --host",
+        "preview": "vite preview --port 8080 --open --host",
+        "start": "yarn dev",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "build-app": "yarn check && yarn vite build",
+        "build-server": "echo \"Building Golang binary...\" && go env -w CGO_ENABLED=1 && go build -buildvcs=false -mod=readonly -v",
+        "build-full": "yarn build-app && yarn build-server",
+        "build-all": "yarn build-full",
+        "build": "yarn build-full",
+        "serve": "open-cli http://localhost:8080 && ./main",
+        "serve-win": "open-cli http://localhost:8080 && main",
+        "docker": "docker build . -t svelte-ts-go -f Dockerfile",
+        "docker-run": "open-cli http://localhost:8080 && docker run -p 8080:8080 --rm svelte-ts-go",
+        "commit": "git pull origin main && git add . && git commit -m \"Updating\" && git push origin main"
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-static": "^3.0.6",
+        "@sveltejs/kit": "^2.9.0",
+        "@sveltejs/vite-plugin-svelte": "^5.0.1",
+        "open-cli": "^8.0.0",
+        "svelte": "^5.8.1",
+        "svelte-check": "^4.1.1",
+        "svelte-preprocess": "^6.0.3",
+        "typescript": "^5.7.2",
+        "vite": "^6.0.3",
+        "yarn-upgrade-all": "^0.7.4"
+    },
+    "type": "module",
+    "dependencies": {
+        "@fontsource/open-sans": "^5.1.0",
+        "bootstrap": "^5.3.3",
+        "picomatch": "^4.0.2"
+    }
 }
